trying to fix text cutoff

--- a/index.css
+++ b/index.css
@@ -272,8 +272,7 @@ body{
     box-shadow:0px 0px 0px rgb(0, 0, 0, 0);
     transition:0.4s ease-in-out;
     margin:2vh 0px;
-    transform:scale(1);
-    backface-visibility: hidden;
+    backface-visibility:hidden;
 }
 
 #projects section:hover {
